pkg/config/analysis/analyzers/testdata/conflicting-gateways-invalid-port.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: beta
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - "foo.bar"
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: alpha
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - "bar.bar"
